# Zork

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  alias.sh  coverage.json  d_2abe43f5fa75c035___init___py.html  d_2abe43f5fa75c035_attributes_py.html  d_2abe43f5fa75c035_properties_py.html  d_2abe43f5fa75c035_user_config_py.html  d_dc1e8d8def008fcb___init___py.html  d_dc1e8d8def008fcb_constants_py.html  d_dc1e8d8def008fcb_exceptions_py.html  d_dc1e8d8def008fcb_logs_py.html  d_dc1e8d8def008fcb_regex_patterns_py.html  d_dc1e8d8def008fcb_workspace_scanner_py.html  d_dc1e8d8def008fcb_zork_cli_py.html  d_e754a317c03c5687_compiler_tasks_py.html  d_e754a317c03c5687_config_file_parser_py.html  d_e754a317c03c5687_program_definitions_py.html  d_e754a317c03c5687_runners_py.html  index.html  installer-zork.iss  pyproject.toml  pyvenv.cfg  requeriments.txt  rust-analyzer.json  setup.py  status.json  test1  testW2  windows-installer-zork.iss  zork.conf
.github/: CODEOWNERS  CODE_OF_CONDUCT.md
Zork/: config_file_parser.py  constants.py  pycompiler++.py  structures.py  workspace_scanner.py  zork.conf
buildadsfs/: testW2
examples/: main.cpp  zork.conf
release-config/: certificate_windows.pfx  windows-installer-zork.iss
test/: conftest.py  index.html  test.rs.html
workflows/: code-coverage.yml  release.yml  tests-clang-linux.yml  tests-msvc.yml
zork/: compiler_tasks.py  constants.py  (+7 more)
zork++/: .gitignore  Cargo.toml  criterion.toml
zork++/TestZork/: zork_clang.toml
zork++/benches/: benchmarks.rs  zork++_benchmarks.rs
zork++/clang_example/: main.cpp  zork_clang.toml
zork++/gcc_example/: zork_gcc.toml
zork++/gcc_example/src/: math2.cpp
zork++/gcc_tests/: hello.cc  main.cc
zork++/gcc_tests/a/: gcc_mapper.txt
zork++/gcm.cache/: math.gcm
zork++/github-example/: [deactivated]zork_clang.toml  main.cpp  nope.toml  zork_clang.toml
zork++/github-example/ifc/: interface_partition.cppm  internal_partition.cpp  math.cppm
zork++/github_example/: zork_clang.toml
zork++/local_tests/msvc_example/: zork_msvc.toml
zork++/local_tests/msvc_local_example/: zork_msvc.toml
zork++/local_tests/msvc_tests/: zork_msvc.toml
zork++/local_tests/msvc_tests/ifc/: math.ixx
zork++/local_tests/msvc_tests/src/: math2.cpp
zork++/local_tests/other_msvc/: zork_msvc.toml
zork++/msvc_example/: main.cpp  nope.toml  zork_msvc.toml
zork++/msvc_example/ifc/: interface_partition.ixx  partitions.ixx
zork++/src/lib/: lib.rs
zork++/src/lib/bounds/: mod.rs
zork++/src/lib/cache/: compile_commands.rs  mod.rs
zork++/src/lib/cli/: mod.rs
zork++/src/lib/cli/input/: mod.rs
zork++/src/lib/cli/output/: arguments.rs  commands.rs  executors.rs  mod.rs
zork++/src/lib/compiler/: arguments.rs  commands.rs  data_factory.rs  mod.rs  translation_unit.rs
zork++/src/lib/config_cli/: mod.rs
zork++/src/lib/config_file/: build.rs  compiler.rs  executable.rs  mod.rs  modules.rs  project.rs  target.rs  tests.rs  workspace.rs
zork++/src/lib/domain/: flyweight_data.rs  mod.rs  target.rs  translation_unit.rs
zork++/src/lib/domain/commands/: arguments.rs  command_lines.rs  mod.rs
zork++/src/lib/project_model/: arguments.rs  build.rs  compiler.rs  executable.rs  mod.rs  modules.rs  project.rs  sourceset.rs  target.rs  tests.rs  workspace.rs
zork++/src/lib/utils/: cache.rs  constans.rs  constants.rs  fs.rs  logger.rs  mod.rs  reader.rs  template.rs  test.rs
zork++/src/lib/utils/template/: mod.rs
zork++/src/lib/utils/template/resources/: interface_partition.cppm  internal_partition.cpp  main.cpp  main_basic.cpp  math.cpp  math.cppm  mod.rs  partitions.cppm  show_interface_partition.cppm  show_partitions.cppm  std.h  zork.modulemap  zork.toml  zork_example.toml  zork_example_basic.toml  zork_example_basic_gcc.toml  zork_example_basic_msvc.toml  zork_example_gcc.toml  zork_example_msvc.toml
zork++/test/: test.rs  zork.toml
zork++/testing_example/: zork_clang.toml
zork-rust/: Cargo.toml
zork-rust/src/lib/: lib.rs
zork-rust/src/lib/config_cli/: command.rs  mod.rs
zork-rust/src/lib/config_file/: build.rs  compiler.rs  executable.rs  language.rs  mod.rs  modules.rs  project.rs  tests.rs
zork-rust/src/lib/utils/: logger.rs  mod.rs
zork-rust/tests/: mod.rs  test.rs  zork.toml
zork-rust/tests/data/: mod.rs  test_arguments.rs
(+83 files in other folders)
