[tool.poetry]
name = "zork++"
version = "1.0.0"
description = "A short description of the package."
license = "MIT"
authors = [
    "Alex Vergara <pyzyryab@tutanota.com>",
]
maintainers = [
]
readme = "README.md"
repository = "https://github.com/zerodaycode/Zork"
documentation = "https://github.com/zerodaycode/Zork"

packages = [
    { include = "zork" }
]
include=["CHANGELOG.md"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
