# pyproject.toml

[project]
name = 'Zork++'
version = '0.2.0'
authors = [
    {name = 'ZeroDayCode', email = 'zerodaycode@tutanota.com'},
    {name = 'Alex Vergara', email = 'pyzyryab@tutanota.com'},
]
mantainers = [
    {name = 'Gbm25', email = 'gbm25@gmail.com'},
    {name = 'The Hidden on System'},
]
description = 'Modern C++ build system for modern C++ projects'
readme = 'README.md'
requires-python = '>=3.10'
dependencies = [
    'pyinstaller', 'pytest'
]

[tool.setuptools.packages.find]
where = ['zork']

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '-ra -q'
testpaths = [
    'test',
    'test/unit',
    'test/integration',
]
[tool.coverage.run]
source = ['zork']